10/31/11 since size of beakers labels is static, scale text to fit
# 0.00.10 (58200) Oct 31, 2011
10/31/11 version to demo alternative layout of Dilution play area
10/31/11 Dilution: try alternative layout of things to right of "=" sign, left-to-right order is: M2,V2,Beaker
# 0.00.09 (58198) Oct 31, 2011
10/31/11 version to demo alternative layout of Dilution play area
10/31/11 Dilution: try alternative layout of things to right of "=" sign, left-to-right order is: V2,Beaker,M2
10/31/11 Dilution: smaller font and size for beaker labels
10/31/11 Dilution: make beakers slightly wider
10/31/11 Dilution: because horizontal layout is so tight, scale rootNode to ensure that translated versions fit in the play area
10/31/11 Dilution: move Reset All button to same location as Molarity tab (upper right)
# 0.00.08 (58172) Oct 31, 2011
10/31/11 version for discussion with JC
10/31/11 Dilution: make beakers tall-and-skinny
10/31/11 add ability to specify independent x and y scale for beaker image
10/27/11 change request: order solutes by "rainbow color" (ROYGBIV) in Molarity tab
# 0.00.07 (58077) Oct 27, 2011
10/27/11 change some terminology in Solute model (precipitateSize, precipitateParticlesPerMole)
10/27/11 Molarity: center precipitate dev display
10/27/11 common: center root node on the stage
10/27/11 common: move range labels above/below vertical sliders and concentration display
10/27/11 Dilution: use (0,1) for range of M1 and M2
10/27/11 Molarity: minor cleanup in model
10/27/11 Dilution: change V1 range to (0,0.2)
10/27/11 fix SolutionNode to handle zero-volume solution
# 0.00.06 (58044) Oct 26, 2011
10/26/11 curved tick marks on beakers (Arc2D)
10/26/11 make all beakers the same size in Dilution tab
10/26/11 add temporary M1 display in Dilution tab, to demonstrate layout issues
10/26/11 cleanup of slider code
10/26/11 further generalization of beaker node, so it can be reused in Dilution tab
10/25/11 [58016] delete more stuff related to "Show values" feature